src/validation/tests/snapshots/rusty__validation__tests__generic_validation_tests__any_signed_does_not_allow_reals.snap
---
source: src/validation/tests/generic_validation_tests.rs
expression: res
---
SyntaxError { message: "Invalid type nature for generic argument. REAL is no Signed.", range: [SourceLocation { span: Range(TextLocation { line: 2, column: 56, offset: 139 }..TextLocation { line: 2, column: 57, offset: 140 }) }], err_no: type__invalid_nature }
SyntaxError { message: "Invalid type nature for generic argument. LREAL is no Signed.", range: [SourceLocation { span: Range(TextLocation { line: 3, column: 58, offset: 214 }..TextLocation { line: 3, column: 59, offset: 215 }) }], err_no: type__invalid_nature }

